# real-time-md-editor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  load-env.sh
.github/: FUNDING.yml
.github/workflows/: publish.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Editor.tsx
