[package]
name = "real_time_md_editor_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
jsonwebtoken = "9.2"
oauth2 = "4.4"
env_logger = "0.11"
log = "0.4"
