[package]
name = "real_time_md_editor_api"
version = "0.1.0"
authors = ["Suman Jangili"]
edition = "2024"
description = "Serves a Rust Actix‑Web backend to Implement the WebSocket sync logic,oauth2 and jsonwebtoken crates, DB."
repository = "https://github.com/sumanjangili/real-time-md-editor"

[dependencies]
actix-web = "4.5"
actix-cors = "0.7"
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
jsonwebtoken = "9.2"
oauth2 = "4.4"
openssl = "0.10"
env_logger = "0.11"
log = "0.4"

